--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -114,6 +114,7 @@
 
 <script type="text/javascript" src="js/portal/signup/signup.module.js"></script>
 <script type="text/javascript" src="js/portal/signup/controller/signup.controller.js"></script>
+<script type="text/javascript" src="js/portal/signup/controller/verify.controller.js"></script>
 <script type="text/javascript" src="js/portal/signup/signup.routes.js"></script>
 
 <script type="text/javascript" src="js/portal/resources/model/billingPlans.factory.js"></script>
