--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -1,9 +1,9 @@
 <div class="container" ui-view="page">
     <div class="row">
         <div class="col-sm-12">
-            <h2 class="pull-left page-title">
-                Sign Up
-            </h2>
+            <div id="logo">
+                <img src="images/logo_color.png" alt="Logo"/>
+            </div>
         </div>
     </div>
 
@@ -12,25 +12,66 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
 
+                </div>
+                <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
-                                <h1>Please verify your email address</h1>
+                                <h1>Your email is verified.</h1>
                             </div>
                         </div>
                     </div>
-                    <div class="panel-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <p>
-We have sent you a verification link on your email address, you can continue registration process by clicking that link.
-                                    </p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <p>
+                                Please log in to continue.
+                            </p>
+                            <form class="form-horizontal" ng-submit="logIn(model)">
+                                <div class="form-group">
+                                    <label for="email"
+                                           popover-append-to-body="{{true}}"
+                                           class="col-sm-2 control-label"
+                                           popover-trigger="mouseenter"
+                                           popover="New user's email address - the address should be unique across the system">Email</label>
+
+                                    <div class="col-sm-10">
+                                        <input type="email"
+                                               autofocus
+                                               class="form-control"
+                                               id="email"
+                                               placeholder="Email"
+                                               ng-model="model.email"
+                                               ng-disabled="_loading">
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="form-group">
+                                    <label for="password"
+                                           class="col-sm-2 control-label"
+                                           popover-trigger="mouseenter"
+                                    >Password</label>
+
+                                    <div class="col-sm-10">
+                                        <input type="password"
+                                               class="form-control"
+                                               id="password"
+                                               ng-model="model.password"
+                                               ng-disabled="_loading"
+                                               required="">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-offset-2 col-sm-10">
+                                        <input type="submit"
+                                               class="btn btn-success"
+                                               value="Log In"
+                                               ng-disabled="_loading">
+                                    </div>
+                                </div>
+                                </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
