--- a/code/parts/signup/end.html
+++ b/code/parts/signup/end.html
@@ -1,9 +1,9 @@
 <div class="container" ui-view="page">
     <div class="row">
         <div class="col-sm-12">
-            <h2 class="pull-left page-title">
-                Sign up
-            </h2>
+            <div id="logo">
+                <img src="images/logo_color.png" alt="Logo"/>
+            </div>
         </div>
     </div>
 
@@ -12,6 +12,8 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
 
+                </div>
+                <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
@@ -19,20 +21,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <p>
-                                        You can now proceed with creating your
-                                        <a ui-sref="index.domains.new">first domain</a>
-                                    </p>
-                                </div>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <p>
+                                You can now proceed with configuring your
+                                <a href="#" ui-sref="index.webApp">first domain</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+</div>
