--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -92,7 +92,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Internal application name"
-            >Name</label>
+            >App Name</label>
 
             <div class="col-sm-10">
               <input type="text" class="form-control"
@@ -159,7 +159,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK configuration refresh interval in seconds"
-            >Configuration Refresh Interval</label>
+            >Configuration Refresh Interval (seconds)</label>
 
             <div class="col-sm-10">
               <input type="number" class="form-control"
@@ -178,7 +178,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK configuration stale timeout in seconds"
-            >Configuration Stale Timeout</label>
+            >Configuration Stale Timeout (seconds)</label>
 
             <div class="col-sm-10" >
               <input type="number" class="form-control"
@@ -233,7 +233,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK analytics reporting level"
-            >Reporting Level</label>
+            >Analytics Reporting Level</label>
 
             <div class="col-sm-10">
               <select class="form-control"
@@ -254,7 +254,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK analytics reporting interval in seconds"
-            >Reporting Interval</label>
+            >Analytics Reporting Interval (seconds)</label>
 
             <div class="col-sm-10">
               <input type="number" class="form-control"
