--- a/code/dev/parts/menu/help-side.html
+++ b/code/dev/parts/menu/help-side.html
@@ -1,7 +1,3 @@
-<a href="https://revapm.zendesk.com/hc/en-us/requests/new" class="side-menu-item" target="_blank">
-  <i class="glyphicon glyphicon-envelope"></i>
-  Customer Support
-</a>
 <a href="https://api.revapm.net/" class="side-menu-item" target="_blank">
   <i class="glyphicon glyphicon-education"></i>
   API Documentation
@@ -9,6 +5,10 @@
 <a href="https://revapm.zendesk.com/hc/en-us" class="side-menu-item" target="_blank">
   <i class="glyphicon glyphicon-education"></i>
   Knowledge Base
+</a>
+<a href="https://revapm.zendesk.com/hc/en-us/requests/new" class="side-menu-item" target="_blank">
+  <i class="glyphicon glyphicon-envelope"></i>
+  Open Ticket
 </a>
 <a href="http://status.revapm.net/" class="side-menu-item" target="_blank">
   <i class="glyphicon glyphicon-signal"></i>
