--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -25,7 +25,7 @@
 
             </div>
             <div class="panel-body">
-                <form class="form-horizontal">
+                <form class="form-horizontal" name="newUser">
                     <div class="form-group">
                         <label for="email"
                                popover-append-to-body="{{true}}"
