--- a/code/dev/parts/signup/resend.html
+++ b/code/dev/parts/signup/resend.html
@@ -25,8 +25,34 @@
                                 <div class="col-md-12">
                                     <p>
                                         An error occurred during verification process.
-                                        <a href="#" class="text-primary" ng-click="resendToken(user.email)">Resend verification link</a>
                                     </p>
+                                    <form class="form-horizontal" ng-submit="resendToken(model)">
+                                        <div class="form-group">
+                                            <label for="email"
+                                                   popover-append-to-body="{{true}}"
+                                                   class="col-sm-2 control-label"
+                                                   popover-trigger="mouseenter"
+                                                   popover="We will send a new verification token to this email">Email</label>
+
+                                            <div class="col-sm-10">
+                                                <input type="email"
+                                                       autofocus
+                                                       class="form-control"
+                                                       id="email"
+                                                       placeholder="Email"
+                                                       ng-model="model.email"
+                                                       ng-disabled="_loading">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-sm-offset-2 col-sm-10">
+                                                <input type="submit"
+                                                       class="btn btn-success"
+                                                       value="Resend Token"
+                                                       ng-disabled="_loading">
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                     </div>
