--- a/code/parts/signup/email_sent.html
+++ b/code/parts/signup/email_sent.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p>
-                                We have sent you a verification link to <b>{{user.email}}</b>, you can continue registration process by following that link.
+                                We have sent you a verification link to <b>{{model.email}}</b>, you can continue registration process by following that link.
                             </p>
                         </div>
                     </div>
