--- a/code/parts/signup/verify.html
+++ b/code/parts/signup/verify.html
@@ -24,50 +24,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p>
-                                Please log in to continue.
+                                You will be redirected to a secure page to fill in billing details.
                             </p>
-                            <form class="form-horizontal" ng-submit="logIn(model)">
-                                <div class="form-group">
-                                    <label for="email"
-                                           popover-append-to-body="{{true}}"
-                                           class="col-sm-2 control-label"
-                                           popover-trigger="mouseenter"
-                                           popover="New user's email address - the address should be unique across the system">Email</label>
-
-                                    <div class="col-sm-10">
-                                        <input type="email"
-                                               autofocus
-                                               class="form-control"
-                                               id="email"
-                                               placeholder="Email"
-                                               ng-model="model.email"
-                                               ng-disabled="_loading">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password"
-                                           class="col-sm-2 control-label"
-                                           popover-trigger="mouseenter"
-                                    >Password</label>
-
-                                    <div class="col-sm-10">
-                                        <input type="password"
-                                               class="form-control"
-                                               id="password"
-                                               ng-model="model.password"
-                                               ng-disabled="_loading"
-                                               required="">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-offset-2 col-sm-10">
-                                        <input type="submit"
-                                               class="btn btn-success"
-                                               value="Log In"
-                                               ng-disabled="_loading">
-                                    </div>
-                                </div>
-                                </form>
                         </div>
                     </div>
                 </div>
