--- a/code/parts/reports/filters/time-period.html
+++ b/code/parts/reports/filters/time-period.html
@@ -6,7 +6,7 @@
                 ng-model="delay">
           <option value="1">Last 1 Day</option>
           <option value="7">Last 7 Day</option>
-          <!--<option value="30">Last 30 day</option>-->
+          <option value="30">Last 30 Day</option>
         </select>
       </div>
 
