--- a/code/dev/parts/reports/filters/mobile-traffic-filters.html
+++ b/code/dev/parts/reports/filters/mobile-traffic-filters.html
@@ -5,6 +5,7 @@
               ng-model="span">
         <option value="1">Last 1 Day</option>
         <option value="7">Last 7 Days</option>
+        <option value="30">Last 30 Days</option>
       </select>
     </div>
 
