--- a/code/parts/signup/signup.html
+++ b/code/parts/signup/signup.html
@@ -190,7 +190,7 @@
                         <label for="address2"
                                class="col-sm-2 control-label"
                                popover-trigger="mouseenter"
-                               popover="Could be used as a billing address later.">Address 2 &nbsp;</label>
+                               popover="Could be used as a billing address later.">Address (Line 2) &nbsp;</label>
 
                         <div class="col-sm-10">
                             <input type="text"
