--- a/code/parts/signup/signup.html
+++ b/code/parts/signup/signup.html
@@ -196,7 +196,7 @@
                             <input type="text"
                                    class="form-control"
                                    id="address2"
-                                   placeholder="Address 2"
+                                   placeholder="Address (Line 2)"
                                    ng-model="model.address2"
                                    ng-disabled="_loading">
                         </div>
