Minor fixes in signup code

--- a/code/dev/parts/signup/billing_plans.html
+++ b/code/dev/parts/signup/billing_plans.html
@@ -7,7 +7,7 @@
 
     <div class="row" ng-init="initBillingPlans()">
         <div class="col-md-12">
-            <div class="panel panel-default center-block ">
+            <div class="panel panel-default center-block">
                 <div class="panel-body">
                     <div class="row">
                         <div class="text-center col-md-4">
@@ -22,7 +22,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="pull-left">
+                            <div class="text-center">
                                 <h4 class="">
                                     The world of mobile app and web acceleration is just a few minutes away.<br> Please select your RevAPM billing plan:
                                 </h4>
@@ -57,7 +57,7 @@
                                     Custom
                                 </h1>
                                 <hr>
-                                <div>Billing plan configuration to meet your specific needs</div>
+                                <div>Get a billing plan customized to meet your specific needs</div>
                                 <div>
                                     <div></div>
                                 </div>
