--- a/code/dev/parts/signup/email_sent.html
+++ b/code/dev/parts/signup/email_sent.html
@@ -18,13 +18,13 @@
 
                 </div>
                 <div class="panel-heading">
-                    <h4>Please verify your email address.</h4>
+                    <h4>Please verify your email address</h4>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12">
                             <p class="lead">
-                                We have sent you a verification link to <b>{{user.email}}</b>, you can continue registration process by following that link.
+                                We have sent an email with verification link to <b>{{user.email}}</b> - please continue the RevAPM registration process by following the link.
                             </p>
                         </div>
                     </div>
