--- a/code/dev/parts/signup/end.html
+++ b/code/dev/parts/signup/end.html
@@ -18,13 +18,13 @@
 
                 </div>
                 <div class="panel-heading">
-                    <h4>Signup process is complete.</h4>
+                    <h4>Signup process is complete</h4>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12">
                             <p class="lead">
-                                Thank you for completion the sign-up process. In a few seconds you will be redirected to to our login page where you can log in using your freshly created username and password.
+                                Thank you for completing the sign-up process. In a few seconds you will be redirected to our customer portal login page where you can log in using your freshly created username (email) and password.
                             </p>
                         </div>
                     </div>
