--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -23,7 +23,7 @@
                     <div class="col-md-12">
                         <div class="pull-left">
                             <h4 class="">
-                                Please fill in contact info. Fields marked with asterisk (*) are required.
+                                Please fill in your contact info. Fields marked with asterisk (*) are required.
                             </h4>
                         </div>
                     </div>
@@ -174,14 +174,14 @@
                         <label for="address1"
                                class="col-sm-2 control-label"
                                popover-trigger="mouseenter"
-                               popover="Could be used as a billing address later.">Address 1 *</label>
+                               popover="Could be used as a billing address later.">Address *</label>
 
                         <div class="col-sm-10">
                             <input type="text"
                                    class="form-control"
                                    required
                                    id="address1"
-                                   placeholder="Address 1"
+                                   placeholder="Address"
                                    ng-model="model.address1"
                                    ng-disabled="_loading">
                         </div>
