--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -374,18 +374,24 @@
           <hr>
 
           <div class="col-sm-12" style="margin-top: 15px">
+            <a ui-sref="^"
+               ng-disabled="_loading"
+               class="btn btn-default">
+              <i class="glyphicon glyphicon-remove"></i>&nbsp;
+              Cancel
+            </a>
             <button class="btn btn-info"
                     ng-disabled="_loading || editForm.$invalid"
                     ng-click="verify(model, configuration)">
               <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-              <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+              <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp;
               Verify
             </button>
             <button class="btn btn-success"
                     ng-disabled="_loading || editForm.$invalid"
                     ng-click="updateConfig(model, configuration)">
               <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-              <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+              <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp;
               Update
             </button>
             <button class="btn btn-success"
@@ -395,12 +401,6 @@
               <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
               Publish
             </button>
-            <a ui-sref="^"
-               ng-disabled="_loading"
-               class="btn btn-default">
-              <i class="glyphicon glyphicon-remove"></i>&nbsp;
-              Cancel
-            </a>
           </div>
         </form>
       </div>
