--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -152,18 +152,22 @@
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
+              <a ui-sref="^" class="btn btn-default">
+                <i class="glyphicon glyphicon-remove"></i>&nbsp;
+                Cancel
+              </a>
               <button class="btn btn-info"
                       ng-disabled="_loading"
                       ng-click="validateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp;
                 Verify
               </button>
               <button class="btn btn-success"
                       ng-disabled="_loading"
                       ng-click="updateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp;
                 Update
               </button>
               <button class="btn btn-success"
@@ -173,10 +177,6 @@
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Publish
               </button>
-              <a ui-sref="^" class="btn btn-default">
-                <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                Cancel
-              </a>
             </div>
           </div>
 
