--- a/code/dev/parts/profile/two-factor-auth.html
+++ b/code/dev/parts/profile/two-factor-auth.html
@@ -81,7 +81,7 @@
                   Enable 2FA
                 </button>
                 <button type="submit" class="btn btn-default" ng-click="clearCodes()">
-                  <i class="glyphicon glyphicon-remove-circle"></i>&nbsp;
+                  <i class="glyphicon glyphicon-remove"></i>&nbsp;
                   Cancel
                 </button>
               </form>
