Disabled 3D pie charts

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -165,6 +165,7 @@
 <script type="text/javascript" src="js/portal/reports/filter/mobileTrafficFilters.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/mobileTopObjectsFilters.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/pie-chart/pieChart.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/bar-chart/barChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/line-chart/lineChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/d3PieChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/requestsChart.directive.js"></script>
