admin, usage report, re-built

--- a/code/index.html
+++ b/code/index.html
@@ -13,6 +13,7 @@
   <link href="bower_components/angular-chart.js/dist/angular-chart.min.css" rel="stylesheet">
   <link href="bower_components/ui-select/dist/select.min.css" rel="stylesheet">
   <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" >
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
   <link rel="stylesheet" href="//fk.github.io/select2-bootstrap-css/css/select2-bootstrap.css">
 <!-- highlight.js -->
@@ -65,6 +66,9 @@
 
 <script type="text/javascript" src="bower_components/highlightjs/highlight.pack.js"></script>
 <script type="text/javascript" src="bower_components/angular-highlightjs/src/angular-highlightjs.js"></script>
+
+<script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+<script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 
 <script src="config.js"></script>
 
