--- a/code/dev/parts/apps/versions.html
+++ b/code/dev/parts/apps/versions.html
@@ -39,7 +39,7 @@
                         ng-model="currentVersion"
                         ng-change="onChangeVersion()"
                         ng-options="ver.updated_at as format(ver) for ver in versions">
-                  <option value="">--- Please select app configuration version ---</option>
+                  <option value="">Please Select App Configuration Version</option>
                 </select>
               </div>
             </div>
