--- a/code/parts/domains/list.html
+++ b/code/parts/domains/list.html
@@ -132,7 +132,7 @@
                 <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
                   <i class="glyphicon glyphicon-stats"></i>
                 </a>
-                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Historical Versions">
+                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Previous Versions">
                   <i class="glyphicon glyphicon-book"></i>
                 </a>
               </td>
