--- a/code/parts/domains/versions.html
+++ b/code/parts/domains/versions.html
@@ -39,7 +39,7 @@
                         ng-model="currentVersion"
                         ng-change="onChangeVersion()"
                         ng-options="ver.last_published_domain_version as format(ver) for ver in versions">
-                  <option value="">--- Please select domain configuration version ---</option>
+                  <option value="">Please Select Domain Configuration Version</option>
                 </select>
               </div>
             </div>
