--- a/code/parts/auth/forgot-password.html
+++ b/code/parts/auth/forgot-password.html
@@ -10,7 +10,7 @@
                class="form-control"
                ng-model="data.email"
                id="email"
-               placeholder="Enter your Email here"
+               placeholder="Enter your email here"
                ng-disabled="data.loading"
                required
                autofocus>
