--- a/code/parts/auth/login.html
+++ b/code/parts/auth/login.html
@@ -41,7 +41,7 @@
           </div>
           <div class="form-inline">
             <div class="form-group marl_med">
-              <input type="button" id="forgot_password" ng-click="forgotPassword()" value="Forgot Password" class="btn btn-link forgot_password">
+              <input type="button" id="forgot_password" ng-click="forgotPassword()" value="Forgot Password?" class="btn btn-link forgot_password">
             </div>
           </div>
         </div>
