--- a/code/parts/users/list.html
+++ b/code/parts/users/list.html
@@ -95,7 +95,7 @@
               <td>{{user.email}}</td>
               <td>{{user.role}}</td>
               <td>{{user.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
-              <td>{{user.last_login_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
+              <td>{{user.last_login_at ? user.last_login_at : 'Never' | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
               <td class="actions">
                 <a ui-sref=".edit({id: user.user_id})" tooltip="Edit User Profile">
                   <i class="glyphicon glyphicon-pencil"></i>
