--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -87,7 +87,7 @@
                 </a>
               </td>
               <td>{{item.createdBy}}</td>
-              <td>{{item.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
+              <td>{{getRelativeDate(item.updated_at)}}</td>
               <td class="actions">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
                 <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Company">
