--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -94,8 +94,8 @@
               </td>
               <td>{{user.email}}</td>
               <td>{{user.role}}</td>
-              <td>{{user.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
-              <td>{{user.last_login_at ? user.last_login_at : 'Never' | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
+              <td>{{ getRelativeDate(user.updated_at) }}</td>
+              <td>{{ user.last_login_at ? getRelativeDate(user.last_login_at) : 'Never' }}</td>
               <td class="actions">
                 <a ui-sref=".edit({id: user.user_id})" tooltip="Edit User Profile">
                   <i class="glyphicon glyphicon-pencil"></i>
