--- a/code/parts/menu/accounts-side.html
+++ b/code/parts/menu/accounts-side.html
@@ -22,7 +22,7 @@
   <i class="glyphicon glyphicon-time"></i>
   Activity Log
 </a>
-<a ui-sref-active="active" ui-sref="index.usage.web" class="side-menu-item">
-  <i class="glyphicon glyphicon-random"></i>
+<a ui-sref-active="active" ui-sref="index.usage.web" class="side-menu-item" ng-if="!userService.isUser()">
+  <i class="glyphicon glyphicon-signal"></i>
   Usage Reports
 </a>
