--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -41,6 +41,7 @@
                        ng-disabled="_loading"
                        ng-model="pass.current_password"
                        id="current_password"
+                       autocomplete="off"
                        autofocus>
               </div>
             </div>
@@ -53,6 +54,7 @@
                        ng-minlength="8"
                        ng-disabled="_loading"
                        ng-model="pass.new_password"
+                       autocomplete="off"
                        id="new_password">
               </div>
             </div>
@@ -65,6 +67,7 @@
                        ng-minlength="8"
                        ng-disabled="_loading"
                        ng-model="pass.confirm_password"
+                       autocomplete="off"
                        id="confirm_password">
               </div>
             </div>
