--- a/code/parts/apps/edit.html
+++ b/code/parts/apps/edit.html
@@ -41,7 +41,7 @@
                      class="col-sm-2 control-label"
               >SDK Release Version</label>
 
-              <div class="col-sm-10">
+              <div class="col-sm-2">
                 <select class="form-control"
                         ng-disabled="_loading"
                         ng-model="selectedSDKVersion"
@@ -52,7 +52,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-2">
             <div class="btn-group pull-left">
               <button type="button"
                       class="btn btn-primary"
@@ -130,11 +130,11 @@
             <div class="col-sm-10">
               <label>
                 <input type="radio" ng-model="configuration.logging_level" value="debug">
-                Debug
+                Debug  
               </label>
               <label>
                 <input type="radio" ng-model="configuration.logging_level" value="info">
-                Info
+                Info  
               </label>
               <label>
                 <input type="radio" ng-model="configuration.logging_level" value="warning">
@@ -198,13 +198,13 @@
             >Allowed Transport Protocols</label>
             <div class="col-sm-10" id="allowed_transport_protocols">
             <span ng-repeat="protocol in protocols">
-              {{protocol}}
               <input
                 type="checkbox"
                 value="{{protocol}}"
                 ng-checked="configuration.allowed_transport_protocols.indexOf(protocol) > -1"
                 ng-click="toggleProtocolSelection(protocol, configuration)"
               >
+              {{protocol.toUpperCase()}}
             </span>
               </div>
           </div>
