--- a/code/parts/users/list.html
+++ b/code/parts/users/list.html
@@ -81,7 +81,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="user in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+            <tr ng-repeat="user in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
               <td>
                 <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" tooltip="Edit User Profile">
                   {{user.firstname}}
