route update, header view update

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -65,7 +65,9 @@
                                 <span class="glyphicon glyphicon-menu-hamburger" paper-drawer-toggle></span>
                             </div>
                         </div>
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ui-view="menu"></div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div user-login-logout></div>
+                        </div>
                     </div>
                 </nav>
             </div>
